# bls

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  Makefile.onelib  bls.go  bls.sln  bls_smpl.py  common.props  go.mod  mk.bat  mkdll.bat  mklib.bat  readme.md  setvar.bat
.github/workflows/: main.yml
android/jni/: Android.mk  Application.mk
docs/: index.html
docs/demo/: bls-demo.js  bls.html  bls.js  bls.wasm  bls_c.js  bls_c.wasm  exported-bls.js  exported-bls.json  index.html  style.css
ffi/adt/: setenv.bat
ffi/adt/jni/: Application.mk
ffi/android/jni/: Android.mk
ffi/cs/: Makefile  bls.cs  bls.csproj  bls.sln  bls256.cs  bls256.csproj  bls256.sln  bls256_test.cs  bls_eth.cs  bls_eth.csproj  bls_eth.sln  bls_eth_test.cs  bls_test.cs  global.json  readme-ja.md  readme.md
ffi/cs/Properties/: AssemblyInfo.cs
ffi/go/: Makefile  mcl.patch  readme.md  sample.go
ffi/go/bls/: bls.go  bls_test.go  cast.go  config.h  go.mod  go.sum  link.go  mcl.go  misc.go
ffi/java/: BlsTest.java  Makefile  bls.i  bls_impl.hpp  bls_wrap.cxx  readme.md
ffi/java/com/herumi/bls/: Bls.java  BlsConstants.java  BlsJNI.java  PublicKey.java  PublicKeyVec.java  SecretKey.java  SecretKeyVec.java  Signature.java  SignatureVec.java
ffi/js/: bls-re.txt  exported-bls.txt  pre.js
ffi/zig/: Makefile  bls.zig  build.zig  readme.md  sample.zig  test.zig
go/: main.go  main_test.go
go/bls/: bls.go  bls_test.go  mcl.go  mcl_test.go
go/blscgo/: bls.go
include/: bls.h  bls.hpp  bls_if.h  win_semaphore.hpp
include/bls/: bls.h  bls.hpp  bls256.h  bls384.h  bls384_256.h  bls_if.h
sample/: bls_smpl.cpp  bls_tool.cpp  dfinity.c  minsample.c
src/: bls.cpp  bls_c.cpp  bls_c256.cpp  bls_c384.cpp  bls_c384_256.cpp  bls_c512.cpp  bls_c_impl.hpp  bls_if.cpp  mylib.c  qcoeff-bn254.hpp  win_semaphore.cpp
src/proj/blsethlib/: blsethlib.vcxproj
src/proj/blslib/: blslib.vcxproj
test/: CMakeLists.txt  bls256_test.cpp  bls384_256_test.cpp  bls384_test.cpp  bls_c384_test.cpp  bls_c_test.hpp  bls_if_test.cpp  bls_test.cpp  bls_test.hpp
test/eth/: cvt_fast_agg.py  cvt_sign.py  readme.md
test/eth/draft07/: verify.txt
test/proj/bls_eth_test/: bls_eth_test.vcxproj
